# otpcr

./: .readthedocs.yaml  MANUAL.rst  README.rst  pyproject.toml  setup.py
.github/workflows/: bandit.yml
docs/: about.rst  all.rst  conf.py  evidence.rst  guilty.rst  index.rst  manual.rst  reconsider.rst  request.rst  source.rst  writings.rst
docs/_static/: otpcr.css
docs/_templates/: base.rst
docs/files/: sitemap.xml
files/: MANUAL.rst  README.rst
otpcr/: __init__.py  __main__.py  client.py  config.py  console.py  daemon.py  errors.py  face.py  fleet.py  group.py  main.py  object.py  persist.py  reactor.py  runtime.py  service.py  thread.py  workdir.py
otpcr/mods/: err.py  face.py  irc.py  log.py  rss.py  tdo.py
otpcr/modules/: __init__.py  cmd.py  dbg.py  err.py  face.py  fnd.py  irc.py  log.py  mod.py  req.py  rss.py  skl.py  srv.py  tdo.py  thr.py  upt.py
tests/: test_attrs.py  test_composite.py  test_interface.py  test_object.py  test_opml.py
