# This file is placed in the Public Domain.


title = "OTPCR"


# system


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"


# project


[project]
name = "otpcr"
version = "43"
authors = [
    {name = "Bart Thate", email = "rssbotd@gmail.com" },
]
description = "The Office of the Prosecutor's Communication Record 117 of the year 2019"
readme = "README.rst"
license = { text="Public Domain"}
classifiers=[
    'Development Status :: 4 - Beta',
    'License :: Public Domain',
    'Operating System :: Unix',
    'Programming Language :: Python :: 3',
    'Topic :: Utilities'
]


[project.urls]
"home" = "https://pypi.org/project/otpcr"
"bugs" = "https://github.com/rssbotd/otpcr/issues"
"source" = "https://github.com/rssbotd/otpcr"


# setuptools


[tool.setuptools]
script-files = [
   'bin/otpcr',
   'bin/otpcrc',
   'bin/otpcrd',
   'bin/otpcrs'
]   
packages = [
   'otpcr',
   'otpcr.modules'
]


# documentation


[tool.setuptools.data-files]
"share/doc/otpcr/" = [
    'MANUAL.rst',
    'README.rst'
]
"share/doc/otpcr/docs" = [
    'docs/googlea6568bcc05c8d50b.html',
    'docs/ack.png',
    'docs/ack3.png',
    'docs/bevestigd.jpg',
    'docs/bylaw.png',
    'docs/conf.py',
    'docs/ECHAabilify.png',
    'docs/ECHAclozapine.png',
    'docs/ECHAhaldol.png',
    'docs/ECHAzyprexa.png',
    'docs/evidence.rst',
    'docs/genocide.jpg',
    'docs/genocide.png',
    'docs/genocideblack.png',
    'docs/guilty.rst',
    'docs/index.rst',
    'docs/informed.jpg',
    'docs/kamer2.png',
    'docs/OTP111.png',
    'docs/OTP222.png',
    'docs/request.rst',
    'docs/robots.txt',
    'docs/since.png',
    'docs/skull3.png',
    'docs/verbatim7.png',
    'docs/writings.rst'
]
"share/doc/otpcr/docs/files" = [
    'docs/files/sitemap.xml',
    'docs/files/genocide.png'
]
"share/doc/otpcr/docs/_static" = [
    'docs/_static/otpcr.css',
]
"share/doc/otpcr/docs/pdf" =  [
    'docs/pdf/bevestigd.pdf',
    'docs/pdf/EM_Ack_OTP-CR-117_19.pdf',
    'docs/pdf/EM_T04_OTP-CR-117_19.pdf',
    'docs/pdf/EM_T07_OTP-CR-117_19_001.pdf',
    'docs/pdf/Kamer.pdf',
    'docs/pdf/Rome-Statute.pdf'
]
"share/doc/otpcr/docs/_templates" = [
    'docs/_templates/base.rst',
    'docs/_templates/class.rst',
    'docs/_templates/mine.rst',
    'docs/_templates/module.rst'
]
